<resources>
    <string name="app_name">DOITTestTask</string>
    <string name="action_sort_name">Name</string>
    <string name="action_sort_priority">Priority</string>
    <string name="action_sort_date">Date</string>

    <string name="preloader_description_text_default">Loading…</string>

    <string name="sing_in_title">Sing In</string>
    <string name="sing_in_email_hint">E-mail</string>
    <string name="sing_in_password_hint">Password</string>
    <string name="sing_in_checkbox_hint">Login/Register</string>
    <string name="sing_in_login_button_text">Log In</string>

    <string name="sing_in_login_empty_fields_error_text">Fill up empty fields</string>

    <string name="tasks_list_toolbar_title">My Tasks</string>

    <string name="no_internet_connection">No Internet connection</string>

</resources>
