<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools">

    <item
            android:id="@+id/action_settings"
            android:title=""
            android:icon="@drawable/ic_sort"
            app:showAsAction="ifRoom" >

        <menu
              tools:context="com.orynastarkina.doittesttask.MainActivity">
            <item android:id="@+id/name"
                  android:title="@string/action_sort_name"
                  android:orderInCategory="100"
                  app:showAsAction="never"/>
            <item android:id="@+id/priority"
                  android:title="@string/action_sort_priority"
                  android:orderInCategory="200"
                  app:showAsAction="never"/>
            <item android:id="@+id/date"
                  android:title="@string/action_sort_date"
                  android:orderInCategory="300"
                  app:showAsAction="never"/>
        </menu>
    </item>
</menu>

