<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="viewModel"
                  type="com.orynastarkina.doittesttask.MainViewModel"/>
    </data>

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:id="@+id/title"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:textColor="@android:color/black"
                android:text="@string/sing_in_title"
                android:textStyle="bold"
                android:textSize="@dimen/sing_in_title_text_size"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/email"

                app:layout_constraintVertical_chainStyle="packed"
        />

        <EditText
                android:id="@+id/email"

                android:layout_width="@dimen/sing_in_input_fields_width"
                android:layout_height="wrap_content"

                android:hint="@string/sing_in_email_hint"
                android:inputType="textEmailAddress"

                android:text="@={viewModel.email}"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title"
                app:layout_constraintBottom_toTopOf="@id/password"/>

        <EditText
                android:id="@+id/password"

                android:layout_width="@dimen/sing_in_input_fields_width"
                android:layout_height="wrap_content"

                android:hint="@string/sing_in_password_hint"
                android:inputType="textPassword"

                android:text="@={viewModel.password}"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email"
                app:layout_constraintBottom_toTopOf="@id/checkbox"/>

        <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/checkbox"
                android:layout_width="@dimen/sing_in_input_fields_width"
                android:layout_height="wrap_content"

                android:checked="@={viewModel.loginCheckbox}"

                android:text="@string/sing_in_checkbox_hint"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password"

                app:layout_constraintBottom_toTopOf="@+id/loginButton"/>

        <Button
                android:id="@+id/loginButton"
                android:layout_width="@dimen/sing_in_input_fields_width"
                android:layout_height="wrap_content"
                android:text="@string/sing_in_login_button_text"
                android:textAllCaps="true"

                android:onClick="@{viewModel::onLoginClick}"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkbox"/>

    </android.support.constraint.ConstraintLayout>

</layout>